--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,12 +31,7 @@
 		<activity
 			android:name="com.xizz.scoreoflife.EventsActivity"
 			android:label="@string/title_activity_events"
-			android:parentActivityName="com.xizz.scoreoflife.MainActivity">
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN"/>
-				<category android:name="android.intent.category.LAUNCHER"/>
-			</intent-filter>
-		</activity>
+			android:parentActivityName="com.xizz.scoreoflife.MainActivity"/>
 		<activity
 			android:name="com.xizz.scoreoflife.EventInputActivity"
 			android:label="@string/title_activity_input"/>
